--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ url = "2"
 
 [dev-dependencies]
 anyhow = "1"
+tokio = { version = "1.37.0", features = ["rt", "macros"] }
 
 [features]
 default = ["blocking"]
