--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "favicon-picker"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
+authors = ["tonymushah tonymushahdev06@yahoo.com"]
+description = "A library for getting favicon from websites"
+repository = "https://github.com/tonymushah/favicon-picker"
+readme = "./README"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
