--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,6 @@ anyhow = "1"
 tokio = { version = "1.37.0", features = ["rt", "macros"] }
 
 [features]
-default = ["blocking"]
+default = []
 blocking = ["reqwest/blocking"]
 serde = ["dep:serde"]
